Fix node controller methods
